fix: disable electron-builder auto-publish in CI
electron-builder was trying to auto-publish to GitHub, causing build failures.
GitHub Actions handles releases, so we disable auto-publish.

--- a/package.json
+++ b/package.json
@@ -73,11 +73,7 @@
         }
       ]
     },
-    "publish": {
-      "provider": "github",
-      "owner": "romalpani",
-      "repo": "realpomo"
-    }
+    "publish": null
   },
   "dependencies": {
     "lucide": "^0.562.0"
