Fix Ubuntu 24.04 compatibility: use libasound2t64 instead of libasound2
- libasound2 is a virtual package in Ubuntu 24.04 (Noble)
- Replace with libasound2t64 which is the actual package name
- Fixes apt-get installation error in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install system dependencies for Electron
         run: |
           sudo apt-get update
-          sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2 libxss1
+          sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2t64 libxss1
 
       - name: Start virtual display
         run: |
