Fix release workflow: disable electron-builder auto-publish
- Add publish: null to package.json to disable electron-builder auto-publishing
- Add GH_TOKEN env var to build step as fallback
- Release job handles publishing separately, so electron-builder should only build artifacts
- Fixes 'GitHub Personal Access Token is not set' error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,11 @@ jobs:
         run: npm run build:app
 
       - name: Build distributable
+        env:
+          # Disable electron-builder auto-publish (we handle releases in a separate job)
+          PUBLISH_FOR_PULL_REQUEST: false
+          # Provide GH_TOKEN if electron-builder needs it (it will use GITHUB_TOKEN automatically)
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Verify icon file exists
           if [ ! -f "build/icon.png" ]; then
