fix: remove quarantine attributes from macOS builds to prevent Gatekeeper warnings
- Add afterPack hook to remove quarantine from app bundle before DMG creation
- Add post-build script to remove quarantine from DMG files
- Update build process and GitHub Actions workflow to run quarantine removal

This allows users to run the app without right-click workaround, even without code signing.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,11 @@ jobs:
           # Note: build:app was already run in the previous step
           npx electron-builder --publish never
 
+      - name: Remove quarantine attributes (macOS only)
+        if: matrix.os == 'macos-latest'
+        shell: bash
+        run: node scripts/remove-quarantine.js
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
