feat: add code signing configuration for macOS
- Add entitlements.mac.plist for hardened runtime
- Configure code signing in package.json
- Add helper scripts and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ dist
 release
 .DS_Store
 *.log
+
+# Code signing certificates and keys (NEVER commit these!)
+*.p12
+*.p12.base64
+certificate.p12
+certificate.p12.base64
+*.cer
+*.key
+*.mobileprovision
+
+# Environment files (if any)
+.env
+.env.local
+.env.*.local
+
+# Temporary keychain files
+temp-build-keychain
+*.keychain-db.tmp
